all the info is showing on the page. details needs to fix, image on the cards are not showing and every info are in one page.

--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,7 @@
 .employee {
   margin-left: 90px;
 }
+
 .port {
   padding: 5vw;
 }
@@ -75,10 +76,6 @@ h6 {
 
 img {
   padding: 10px;
-}
-
-.card {
-  margin-bottom: 5vw;
 }
 
 .card-title {
@@ -161,7 +158,7 @@ h6 {
     margin-left: 20px;
   }
 
-  .aboutme {
+  #aboutme {
     text-align: center;
     font-size: 15px;
     margin-left: 20px;
